# HumanRobotColaboration

./: .gitignore  .gitmodules  404.html  LOGBOOK.md  NOTAS.md  README.md  SOA.md  index.html  search.html  sitemap.xml
conclusion/: index.html
hand_guide/: index.html
hrc-docs/: mkdocs.yml
hrc-docs/docs/: hand_guide.md  index.md  intro.md  logbook.md  related_work.md  safe_planning.md  setup.md  soa.md  soa_research.md  struct.md  struct_research.md  tasks.md
hrc-docs/site/: 404.html  index.html  sitemap.xml
hrc-docs/site/arch/: index.html
hrc-docs/site/contents/: index.html
hrc-docs/site/intro/: index.html
hrc-docs/site/logbook/: index.html
hrc-docs/site/search/: search_index.json
hrc-docs/site/soa/: index.html
intro/: index.html
iris_ws/: .gitignore
iris_ws/bags/: all.bag  wrench10.bag  wrench3.bag  wrench_pushes.bag  wrench_taps.bag  wrench_twist.bag
iris_ws/src/iris_cobot/: CMakeLists.txt  moveit.rviz  package.xml
iris_ws/src/iris_cobot/curves/: pj_filter.xml  pj_layout.xml
iris_ws/src/iris_cobot/launch/: iris_cobot.launch
iris_ws/src/iris_cobot/src/: controller.cpp  correct.py  fit.py  ft_sensor.py  globe.py  gripper.py  helpers.py  jacobian.cpp  moveit_controller.cpp  read_realtime.py  record.py  rotation.cpp  rtde.cpp  test.py  torque.py  torque_to_angvel.cpp  urscript.py  viewer.cpp  weight.py  wrench.py
iris_ws/src/ur10e_control/: CMakeLists.txt  package.xml
iris_ws/src/ur10e_control/cfg/: Fit.cfg
iris_ws/src/ur10e_control/src/: ArmControl.py  controller.py  fit.py  menu.py  test.py  wrench.py  wrench_test.py
iris_ws/src/ur10e_control/yaml/: positions.yaml
logbook/: index.html
merge_ws/: .gitignore
new_ws/src/iris_cobot/: CMakeLists.txt  setup.py
new_ws/src/iris_cobot/cfg/: FT_to_Vel.cfg
new_ws/src/iris_cobot/curves/: markers.pickle  pj_layout.xml
new_ws/src/iris_cobot/launch/: compliance.launch  iris_cobot.launch  iris_cobot.rviz  wrench.launch
new_ws/src/iris_cobot/msg/: JointSpeed.msg
new_ws/src/iris_ur10e_control/: CMakeLists.txt  package.xml
related_work/: index.html
results/: index.html
ros_ws/src/iris_cobot/: CMakeLists.txt  package.xml  plugin.xml  setup.py
ros_ws/src/iris_cobot/cfg/: Clustering.cfg  FT_to_Vel.cfg  FTtoVel.cfg  Jacobian.cfg  JointFilter.cfg  JointSpeedCont.cfg  ObstacleDetection.cfg  Obstacles.cfg  WrenchFilter.cfg
ros_ws/src/iris_cobot/curves/: camera_tf.pickle  cobot.perspective  pj_layout.xml  traj_no_obstacle.bag  traj_obstacle.bag
ros_ws/src/iris_cobot/launch/: control.launch  hand_guiding.launch  handeye_calibration.launch  handeye_publish.launch  interaction.launch  iris_cobot.launch  iris_cobot.rviz  obstacle_avoidance.launch  wrench.launch
ros_ws/src/iris_cobot/msg/: Obstacles.msg  PFVector.msg  TapAction.msg
ros_ws/src/iris_cobot/record/last/: wrench_after_gripper_couple.bag
ros_ws/src/iris_cobot/record/last/16_ft_sensor_weight_1Kg/: x_neg_weight  x_pos_weight  y_neg_weight  y_pos_weight  z_neg_weight  z_pos_weight
ros_ws/src/iris_cobot/record/last/17_trajectory/: traj_real_100.bag  traj_real_30.bag  traj_real_50.bag  traj_real_60.bag  traj_real_70.bag  traj_real_80.bag  traj_real_90.bag  traj_real_no_obstacle.bag
ros_ws/src/iris_cobot/resource/: CobotPlugin.ui
ros_ws/src/iris_cobot/scripts/: rqt_cobot  switch_controllers.py
ros_ws/src/iris_cobot/src/cobot/: helpers.py  kinematics.cpp  kinematics.py
ros_ws/src/iris_cobot/src/cobot/hand_guiding/: __init__.py  ft_theory.py  ft_to_vel.cpp  positional_correction.py  record.py  time_series_analysis.py  weight.py  wrench_correct.py  wrench_filter.cpp  wrench_theory.py  wrench_to_vel.cpp
ros_ws/src/iris_cobot/src/cobot/interaction/: __init__.py  double_tap.py  gripper_led.py  gripper_sm.py  ur10e_smach.py  weight_test.py
ros_ws/src/iris_cobot/src/cobot/wrench/: correct.py  ft_theory.py  weight.py
ros_ws/src/iris_cobot/src/compliance/: ft_to_vel.cpp  jacobian.cpp  joint_vel_cont.cpp  moveit_controller copy.cpp  moveit_controller.cpp
ros_ws/src/iris_cobot/src/control/: ft_to_vel.cpp  jacobian.cpp  joint_speed_controller.cpp  joint_vel_cont.cpp  joint_vel_filter.cpp  joint_vel_pid.cpp  moveit_controller.cpp
ros_ws/src/iris_cobot/src/environment/: attraction.cpp  environment.cpp  obstacle.cpp  offline.py  pf_controller.py  repulsion.py  scan.py  spawn_obstacles.py
ros_ws/src/iris_cobot/src/obstacle_avoidance/: attraction.cpp  calibration.py  obstacle_detection.cpp  obstacles.cpp  offline.py  pf_controller.py  planner.py  repulsion.py  spawn_obstacles.py
ros_ws/src/iris_cobot/src/rqt_cobot/: plugin.py
ros_ws/src/iris_cobot/src/test/: scene.py  test.py  viewer.cpp
ros_ws/src/iris_cobot/src/visualization/: final.py  fit.py  globe.py  plots.py  trajectory.py  viewer.cpp
ros_ws/src/iris_cobot/srv/: ForwardKinematics.srv  WrenchControl.srv
ros_ws/src/iris_cobot/urdf/: sphere.urdf
ros_ws/src/iris_cobot/yaml/: easy_handeye_eye_on_base.yaml
ros_ws/src/iris_ur10e/: CMakeLists.txt  package.xml  plugin.xml  setup.py
ros_ws/src/iris_ur10e/launch/: live.launch  sim.launch  ur10e.launch  ursim.launch
ros_ws/src/iris_ur10e/resource/: UR10ePlugin.ui
ros_ws/src/iris_ur10e/scripts/: rqt_ur10e
ros_ws/src/iris_ur10e/src/rqt_ur10e/: plugin.py
ros_ws/src/rqt_iris_sami/: CMakeLists.txt  package.xml  plugin.xml  setup.py
safe_planning/: index.html
screenshots/2-wrench/: Test With Gripper.md
screenshots/3-wrench/: Test Without Gripper.md
search/: search_index.json
setup/: index.html
soa/: index.html
soa_research/: index.html
struct/: index.html
struct_research/: index.html
tasks/: index.html
thesis/: Makefile  acronyms.tex  cover.tex  custom-theme.tex  matter.tex  uaThesisTemplate.sty
thesis/bib/: references.bib
thesis/chapters/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  example.tex
thesis/figs/chp3/: ft_sensor_behavior.eps  ft_sensor_drift.eps  ft_sensor_test_5.eps  ft_sensor_theory.eps  ft_sensor_theory_adjust.eps  ft_sensor_theory_adjust_hist.eps  ft_sensor_theory_hist.eps  wrist_3_result_hist.eps
(+41 files in other folders)
