<?xml version="1.0"?>
<package format="2">
    <name>iris_ur10e</name>
    <version>0.0.0</version>
    <description>The iris_ur10e package</description>

    <author email="efp@ua.pt">Eurico Farinha Pedrosa</author>
    <maintainer email="efp@ua.pt">Eurico Farinha Pedrosa</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>rqt_gui</build_depend>
    <build_depend>rqt_gui_py</build_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>rqt_gui</build_export_depend>
    <build_export_depend>rqt_gui_py</build_export_depend>
    <exec_depend>rviz</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>moveit</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>rqt_gui</exec_depend>
    <exec_depend>rqt_gui_py</exec_depend>
    
    <export>
        <rqt_gui plugin="${prefix}/plugin.xml"/>
    </export>
</package>
